--- a/package.json
+++ b/package.json
@@ -18,22 +18,23 @@
   },
   "homepage": "https://github.com/JeffL84/web_project_4#readme",
   "dependencies": {
-    "babel-polyfill": "^6.26.0",
-    "jquery": "^3.5.1"
+    "corejs": "^1.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.10.5",
-    "@babel/preset-env": "^7.10.4",
-    "autoprefixer": "^9.8.5",
+    "@babel/core": "^7.10.2",
+    "@babel/preset-env": "^7.10.2",
+    "autoprefixer": "^9.8.0",
     "babel-loader": "^8.1.0",
-    "css-loader": "^3.6.0",
+    "css-loader": "^3.5.3",
     "cssnano": "^4.1.10",
     "file-loader": "^6.0.0",
     "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.3.0",
     "mini-css-extract-plugin": "^0.9.0",
+    "path": "^0.12.7",
     "postcss-loader": "^3.0.0",
-    "webpack-cli": "^3.3.12",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0"
   }
 }
